@@ -5,6 +5,14 @@
 <body>
 <center><h2>History For AdvanceCOMP</h2></center>
 <h2> 
+AdvanceCOMP Version 1.19 2014/03
+</h2>
+<ul>
+<li>
+Limited the iterations number to 255 with the -3 option.
+</li>
+</ul>
+<h2> 
 AdvanceCOMP Version 1.18 2013/11
 </h2>
 <ul>
