@@ -3,6 +3,12 @@
                             =======================
 
 
+ADVANCECOMP VERSION 1.19 2014/03
+================================
+
+* Limited the iterations number to 255 with the -3 option.
+
+
 ADVANCECOMP VERSION 1.18 2013/11
 ================================
 
